; ModuleID = '/home/carl/AnghaBench/linux/fs/cifs/extr_smb2pdu.c_smb2_plain_req_init.c'
source_filename = "/home/carl/AnghaBench/linux/fs/cifs/extr_smb2pdu.c_smb2_plain_req_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cifs_tcon = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }
%struct.smb2_sync_hdr = type { i32 }

@SMB2_SET_INFO = common dso_local global i64 0, align 8
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.cifs_tcon*, i8**, i32*)* @smb2_plain_req_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smb2_plain_req_init(i64 %0, %struct.cifs_tcon* %1, i8** %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.cifs_tcon*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i64 %0, i64* %6, align 8
  store %struct.cifs_tcon* %1, %struct.cifs_tcon** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load %struct.cifs_tcon*, %struct.cifs_tcon** %7, align 8
  %14 = call i32 @smb2_reconnect(i64 %12, %struct.cifs_tcon* %13)
  store i32 %14, i32* %10, align 4
  %15 = load i32, i32* %10, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i32, i32* %10, align 4
  store i32 %18, i32* %5, align 4
  br label %62

19:                                               ; preds = %4
  %20 = load i64, i64* %6, align 8
  %21 = load i64, i64* @SMB2_SET_INFO, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %19
  %24 = call i8* (...) @cifs_buf_get()
  %25 = load i8**, i8*** %8, align 8
  store i8* %24, i8** %25, align 8
  br label %29

26:                                               ; preds = %19
  %27 = call i8* (...) @cifs_small_buf_get()
  %28 = load i8**, i8*** %8, align 8
  store i8* %27, i8** %28, align 8
  br label %29

29:                                               ; preds = %26, %23
  %30 = load i8**, i8*** %8, align 8
  %31 = load i8*, i8** %30, align 8
  %32 = icmp eq i8* %31, null
  br i1 %32, label %33, label %36

33:                                               ; preds = %29
  %34 = load i32, i32* @ENOMEM, align 4
  %35 = sub nsw i32 0, %34
  store i32 %35, i32* %5, align 4
  br label %62

36:                                               ; preds = %29
  %37 = load i64, i64* %6, align 8
  %38 = load %struct.cifs_tcon*, %struct.cifs_tcon** %7, align 8
  %39 = load i8**, i8*** %8, align 8
  %40 = load i8*, i8** %39, align 8
  %41 = bitcast i8* %40 to %struct.smb2_sync_hdr*
  %42 = load i32*, i32** %9, align 8
  %43 = call i32 @fill_small_buf(i64 %37, %struct.cifs_tcon* %38, %struct.smb2_sync_hdr* %41, i32* %42)
  %44 = load %struct.cifs_tcon*, %struct.cifs_tcon** %7, align 8
  %45 = icmp ne %struct.cifs_tcon* %44, null
  br i1 %45, label %46, label %60

46:                                               ; preds = %36
  %47 = load i64, i64* %6, align 8
  %48 = call i64 @le16_to_cpu(i64 %47)
  store i64 %48, i64* %11, align 8
  %49 = load %struct.cifs_tcon*, %struct.cifs_tcon** %7, align 8
  %50 = getelementptr inbounds %struct.cifs_tcon, %struct.cifs_tcon* %49, i32 0, i32 1
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 0
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 0
  %53 = load i32*, i32** %52, align 8
  %54 = load i64, i64* %11, align 8
  %55 = getelementptr inbounds i32, i32* %53, i64 %54
  %56 = call i32 @cifs_stats_inc(i32* %55)
  %57 = load %struct.cifs_tcon*, %struct.cifs_tcon** %7, align 8
  %58 = getelementptr inbounds %struct.cifs_tcon, %struct.cifs_tcon* %57, i32 0, i32 0
  %59 = call i32 @cifs_stats_inc(i32* %58)
  br label %60

60:                                               ; preds = %46, %36
  %61 = load i32, i32* %10, align 4
  store i32 %61, i32* %5, align 4
  br label %62

62:                                               ; preds = %60, %33, %17
  %63 = load i32, i32* %5, align 4
  ret i32 %63
}

declare dso_local i32 @smb2_reconnect(i64, %struct.cifs_tcon*) #1

declare dso_local i8* @cifs_buf_get(...) #1

declare dso_local i8* @cifs_small_buf_get(...) #1

declare dso_local i32 @fill_small_buf(i64, %struct.cifs_tcon*, %struct.smb2_sync_hdr*, i32*) #1

declare dso_local i64 @le16_to_cpu(i64) #1

declare dso_local i32 @cifs_stats_inc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
